--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "grunt-contrib-jshint": "^0.10.0",
     "grunt-contrib-less": "^0.12.0",
     "grunt-contrib-uglify": "^0.6.0",
-    "grunt-contrib-watch": "^0.6.1"
+    "grunt-contrib-watch": "^0.6.1",
+    "grunt-appcache": "^0.1.8"
   }
 }
