--- a/package.json
+++ b/package.json
@@ -1,6 +1,13 @@
 {
   "name": "whitemap",
   "version": "0.1.1",
+  "description": "A white-label WordPress map theme with a strong focus on privacy.",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/marklindhout/White-Map.git"
+  },
+  "bugs": "https://github.com/marklindhout/White-Map/issues",
+  "license": "GPL-3.0+",
   "devDependencies": {
     "grunt": "~0.4.5",
     "grunt-contrib-concat": "^0.5.0",
